--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
+    <nav class="navBar">
         <ul class="menu">
-            <li>Menu Item 1</li>
+          <li><img src="images/wine-cheese.png" alt="Logo"></li>
             <li>Menu Item 2</li>
             <li>Wine Region
               <div class="text-block">
                 <p>Portugal is a country known for producing high-quality wine, with a long and rich history of winemaking dating back to ancient times. Portuguese wine is known for its diversity, with a wide range of grape varieties and wine styles, each with its own unique flavor and character.</p>
               </div>
             </li>
-            <li>Cheese Region</li>
+            <li>Cheese Region
+              <div class="text-cheese">
+                <p>Portugal has a long history of cheese-making, and there are many different types of cheeses produced throughout the country. Portuguese cheese is often eaten on its own, as a snack or appetizer, or used as an ingredient in traditional Portuguese dishes. It is also commonly paired with wine, particularly the famous Portuguese wine, port.</p>
+              </div>
+            </li>
           </ul>
         </nav>
     
