aded intro and button explore site

--- a/index.html
+++ b/index.html
@@ -66,7 +66,20 @@
             <option value="madeira">Madeira</option>
         </select>
     </div> -->
-        
+    <section class="siteIntro">
+      <p>
+        Welcome to our wine and cheese website, where we invite 
+        you to indulge in the finer things in life. Whether you're
+        a seasoned connoisseur or a curious novice, we invite you 
+        to explore our collection and discover 
+        the magic of wine and cheese.
+      </p>
+
+      <button class="btnExplore">
+        Explore our Collection
+      </button>
+
+    </section>     
     
 </body>
 </html>
