--- a/index.html
+++ b/index.html
@@ -79,7 +79,18 @@
         Explore our Collection
       </button>
 
-    </section>     
+    </section>
+    
+    <footer>
+      <p>Sponsored by: </p>
+      <i class="fa-brands fa-facebook"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-tiktok"></i>
+      <i class="fa-brands fa-linkedin"></i>
+      <i class="fa-brands fa-github"></i>
+      <i class="fa-brands fa-discord"></i>
+      <i class="fa-brands fa-youtube"></i>
+    </footer>
     
 </body>
 </html>
