--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="indexPage">
     <nav class="navBar">
         <ul class="menu">
           <li><img src="images/wine-cheese.png" alt="Logo"></li>
