created search page

--- a/searchProd.html
+++ b/searchProd.html
@@ -9,6 +9,11 @@
     <title>Document</title>
 </head>
 <body>
+  <header>
+    <p>
+      Portugal's Wine and Cheese Regions
+    </p>
+  </header>
     <nav class="navBarSearch">
         <ul class="menu">
           <li><img src="images/wine-cheese.png" alt="Logo"></li>
@@ -54,7 +59,7 @@
             <!-- </li> -->
             
         </ul>
-        <div class="searchSignin">
+        <div class="searchSignin searchSignin2">
           <form action="#" method="get">
             <label for="search"></label>
             <input type="text" id="search" name="search" placeholder="Search...">
@@ -70,13 +75,13 @@
       
         <figure class="wineList">
           <figcaption>Wineries</figcaption>
-              <a href="#" class="active">Quinta do Ameal: Known for its organic and biodynamic wines, Quinta do Ameal is located in the Lima sub-region of Vinho Verde and produces a variety of white wines</a>
-              <a href="#">Quinta de Gomariz: This winery is located in the Vinho Verde region of Portugal and is known for producing high-quality white, red, and rosé wines.</a>
-              <a href="#">Aveleda: Founded in 1870, Aveleda is one of the largest Vinho Verde wineries and produces a range of white, red, and sparkling wines. They are also known for their estate gardens, which are open to the public for tours</a>
-              <a href="#">Soalheiro: This winery, located in the Melgaço sub-region, is known for its Alvarinho grape varietals and produces a range of white and red wines.</a>
-              <a href="#">Anselmo Mendes: Anselmo Mendes is a winery located in the Monção sub-region and is known for its white wines made from Alvarinho grapes</a>
-              <a href="#">Quinta de Covela: Located in the Sousa sub-region, Quinta de Covela produces a range of white, red, and rosé wines, as well as a sparkling wine made from the Arinto grape.</a>
-              <a href="#">Casa de Mouraz: This winery, located in the Távora-Varosa sub-region, produces organic and biodynamic wines, including reds, whites, and rosés.</a>
+              <a href="#" class="active"><b>Quinta do Ameal:</b> Known for its organic and biodynamic wines, Quinta do Ameal is located in the Lima sub-region of Vinho Verde and produces a variety of white wines</a>
+              <a href="#"><b> de Gomariz:</b> This winery is located in the Vinho Verde region of Portugal and is known for producing high-quality white, red, and rosé wines.</a>
+              <a href="#"><b>Aveleda:</b> Founded in 1870, Aveleda is one of the largest Vinho Verde wineries and produces a range of white, red, and sparkling wines. They are also known for their estate gardens, which are open to the public for tours</a>
+              <a href="#"><b>Soalheiro:</b> This winery, located in the Melgaço sub-region, is known for its Alvarinho grape varietals and produces a range of white and red wines.</a>
+              <a href="#"><b>Anselmo Mendes:</b> Anselmo Mendes is a winery located in the Monção sub-region and is known for its white wines made from Alvarinho grapes</a>
+              <a href="#"><b>Quinta de Covela:</b> Located in the Sousa sub-region, Quinta de Covela produces a range of white, red, and rosé wines, as well as a sparkling wine made from the Arinto grape.</a>
+              <a href="#"><b>Casa de Mouraz:</b> This winery, located in the Távora-Varosa sub-region, produces organic and biodynamic wines, including reds, whites, and rosés.</a>
         </figure>
 
         <figure class="WineryDescription">
