Added contact info

--- a/contactUs.html
+++ b/contactUs.html
@@ -3,14 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <script src="https://kit.fontawesome.com/b789b19019.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Contact Us</title>
 </head>
-<body class="contactUsPage">
+<body class="indexPage">
+  <header class="contactUs">
+    <div class="divImg">
+      <img src="./images/wine-cheese.png" alt="wine&cheese">
+    </div>
     
+    <p>Get in touch</p>
+    <section>
+      <p>Want to get in touch? We'd love to hear from you. Here is how you can reach us...</p>
+    </section>
+    
+  </header>
+
+  <section class="talkToUs">
+    <div>
+      <img src="./images/Icons8-Windows-8-Mobile-Phone.512.png" alt="phone">
+      <p class="pBlockTitle">Talk to us</p>
+      <p>Interested in Wineries and Cheeseries? Just pick up the phone to chat with us</p>
+      <p>+351 999 999 999</p>
+    </div>
+    <div>
+      <img src="./images/Icons8-Windows-8-Messaging-Chat.512.png" alt="chat">
+      <p class="pBlockTitle">Contact customer support</p>
+      <p>Sometimes you need a little help from your friends. Don’t worry... we’re here for you.</p>
+      <button>Contact Support</button>
+    </div>
+  </section>
 </body>
+
+<footer class="footerContactUs">
+  <p>Sponsored by: </p>
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-tiktok"></i>
+  <i class="fa-brands fa-linkedin"></i>
+  <i class="fa-brands fa-github"></i>
+  <i class="fa-brands fa-discord"></i>
+  <i class="fa-brands fa-youtube"></i>
+</footer>
+
 </html>
