--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;500;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Intro</title>
 </head>
 <body class="indexPage">
     <nav class="navBar">
@@ -65,7 +66,7 @@
       </button>
 
       <p class="title">
-        Explore the Wine & Cheese Regions of Portugal
+        Explore Portugal's Wine & Cheese Regions
       </p>
 
     </section>
