--- a/searchProd.html
+++ b/searchProd.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script src="https://kit.fontawesome.com/b789b19019.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" sizes="32x32" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Search</title>
 </head>
 <body>
   <header>
