--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
       </p>
 
       <button class="btnExplore">
-        Explore our Collection
+        <a href="searchProd.html">Explore our Collection</a>
+        
       </button>
 
       <p class="title">
