--- a/searchProd.html
+++ b/searchProd.html
@@ -66,7 +66,10 @@
             <input type="text" id="search" name="search" placeholder="Search...">
             <button type="submit"><i class="fa fa-search"></i></button>
           </form>
-          <p>Sign in</p>
+          <!-- <p>Contact Us</p> -->
+            
+          <a href="contactUs.html">Contact Us</a>
+
           <i class="fa-regular fa-circle-user"></i>
         </div>
           
